--- a/项目记录.md
+++ b/项目记录.md
@@ -7,6 +7,9 @@ vue vue-cli vuex vue-router vue-YDUI(UI) MockHttp(模拟数据) es6 ajax(axios)
 
 用节流函数解决滚动触发次数过多可能导致卡问题
 实现超过距离固定顶部需要了解mounted和created的区别
+设计动画交互时候应该禁止触发事件冒泡
+实现文字第一次出现上浮需要判断其距离可视区顶部的距离是不是小于一个屏幕的距离
+实现多个文字在差异时间上浮需要transition-group
 
 
 
