准备登陆页

--- a/项目记录.md
+++ b/项目记录.md
@@ -11,7 +11,7 @@ vue vue-cli vuex vue-router vue-YDUI(UI) MockHttp(模拟数据) es6 ajax(axios)
 实现文字第一次出现上浮需要判断其距离可视区顶部的距离是不是小于一个屏幕的距离
 实现多个文字在差异时间上浮需要transition-group
 img引用方式 静态资源动态获取需要import 再设置url
-
+设置动画时使用到位移或者translate需要给外层一个overflow:hidden，否则会影响布局
 顶部下拉菜单在出现时候返回顶部
 
 设置动画的javascript钩子必须要设置定时器（异步）  暂时没有理解原因
