--- a/项目记录.md
+++ b/项目记录.md
@@ -13,6 +13,7 @@ vue vue-cli vuex vue-router vue-YDUI(UI) MockHttp(模拟数据) es6 ajax(axios)
 img引用方式 静态资源动态获取需要import 再设置url
 设置动画时使用到位移或者translate需要给外层一个overflow:hidden，否则会影响布局
 顶部下拉菜单在出现时候返回顶部
+computed函数不能带参,且第一次判断的时机是beforecreated和created之间，不能用于判断是否登录（因为永远返回值都是undefined）也就是说用于初始化的所需属性需要在created中执行
 
 设置动画的javascript钩子必须要设置定时器（异步）  暂时没有理解原因
 
