--- a/项目记录.md
+++ b/项目记录.md
@@ -15,7 +15,11 @@ img引用方式 静态资源动态获取需要import 再设置url
 顶部下拉菜单在出现时候返回顶部
 computed函数不能带参,且第一次判断的时机是beforecreated和created之间，不能用于判断是否登录（因为永远返回值都是undefined）也就是说用于初始化的所需属性需要在created中执行
 
-设置动画的javascript钩子必须要设置定时器（异步）  暂时没有理解原因
+设置动画的javascript钩子必须要设置定时器（异步）  暂时没有理解原因  解决：其实是需要官方插件完成
+
+在固定定位fixed的元素的所有父级只要有transform 就会相对于这个元素固定定位，所以用translate3d进行强制gpu加速渲染的话需要注意！可能导致fixed失效
+
+
 
 
 
